--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "sympy>=1.12",
     "python-dotenv>=1.0.0",
     "numpy>=1.24.0",
+    "google-generativeai>=0.3.0",
+    "pillow>=10.0.0",
 ]
 
 [project.optional-dependencies]
