--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "numpy>=1.24.0",
     "google-generativeai>=0.3.0",
     "pillow>=10.0.0",
+    "ollama>=0.4.0"
 ]
 
 [project.optional-dependencies]
