--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "numpy>=1.24.0",
     "google-generativeai>=0.3.0",
     "pillow>=10.0.0",
-    "ollama>=0.4.0"
+    "ollama>=0.4.0",
+    "streamlit>=1.30.0",
+    "streamlit-drawable-canvas>=0.9.3"
 ]
 
 [project.optional-dependencies]
